<resources>
    <string name="app_name">Minigame Bonanza</string>
    <string name="mainfragment">MainFragment</string>
    <string name="self_destruct">startGame</string>
    <string name="start_game">Start game</string>
    <string name="settings">Settings</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="quit">Quit</string>
    <string name="backgrond_image">backgrond image</string>
    <string name="minigame_bonanza">Minigame Bonanza</string>
    <string name="choose_gamemode">Choose gamemode</string>
    <string name="classic">Classic</string>
    <string name="endless">Endless</string>
    <!-- Notification -->
    <string name="notification_title">Minigame Bonanza is running in the background</string>
    <string name="notification_short_description">In order to free up resources and save on battery life…</string>
    <string name="notification_long_description">In order to free up resources and save on battery life, consider terminating the app Minigame Bonanza"</string>
    <!-- Preference Titles -->
    <string name="notification_settings_title">Turn on notifications?</string>
    <string name="notification_summary">Check this if you want notifications that tells you if the app is running in the background</string>
    <string name="choose_language">Choose language</string>
    <string name="choose_language_summary">Choose the language you wish the app to be using</string>
    <string name="norwegian">Norwegian</string>
    <string name="english">English</string>
    <string name="mute_soundeffect_title">Mute sound effect?</string>
    <string name="mute_soundeffect_summary">Do you wish to mute the ding sound that plays whenever you do something correct within a minigame?</string>
    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_minigame1">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- StatusbarFragment -->
    <string name="attempts_remaining">Attempts remaining: </string>
    <string name="points">0</string>
    <string name="score_text">Points: </string>
    <string name="time_remaining">Time remaining: </string>
    <string name="time_remaining_nmbr">00</string>
    <!-- PreMinigameFragment -->
    <string name="minigameDesc">If you see this text, something has gone wrong</string>
    <!-- ResultsActivity -->
    <string name="results_screen">Results screen</string>
    <string name="your_score_is">Your score is:</string>
    <string name="attempts_remaining_results">Attempts remaining:</string>
    <string name="submit_score">Submit score?</string>
    <string name="_0">0</string>
    <string name="input_name">Input name</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="input_name_message">Type in your name.</string>
    <string name="input_name_toast_warning">Your name can\'t be less than 1 character</string>
    <!-- MinigameStatusNotificationFragment strings -->
    <string name="minigame_status_failure_message">You\'ve failed. Restarting..</string>
    <string name="minigame_status_success_message">You\'ve succeeded. Proceeding..</string>
    <string name="minigame_status_error_message">Supposed to be replaced with minigame status</string>
    <!-- Star minigame strings -->
    <string name="minigame_star_description">Click all the golden stars!</string>
    <!-- Shake minigame strings -->
    <string name="minigame_shake_description">Shake your phone 10 times!</string>
    <string name="times_shaken">Times shaken:</string>
    <!-- Location minigame strings -->
    <string name="minigame_location_description">Press the flag of the country you\'re currently in!</string>
    <string name="minigame_location_button">My country isn\'t here</string>
</resources>