<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="Settings">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="notification"
            android:summary="@string/notification_summary"
            android:title="@string/notification_settings_title" />
        <CheckBoxPreference
            android:key="muteSoundFx"
            android:summary="@string/mute_soundeffect_summary"
            android:title="@string/mute_soundeffect_title" />
        <ListPreference
            android:entries="@array/language_entries"
            android:entryValues="@array/language_values"
            android:key="chosen_language"
            android:summary="@string/choose_language_summary"
            android:title="@string/choose_language" />
    </PreferenceCategory>

</PreferenceScreen>