<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layoutDescription="@xml/fragment_mainmenu_scene"
    tools:context=".ui.main.fragments.MainFragment">

    <TextView
        android:id="@+id/appTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:shadowRadius="40"
        android:text="@string/minigame_bonanza"
        android:textAllCaps="false"
        android:textColor="#6FB36F"
        android:textColorLink="#000000"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:text="Minigame Bonanza" />

    <Button
        android:id="@+id/startGameBtn"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="201dp"
        android:layout_height="83dp"
        android:layout_marginBottom="196dp"
        android:onClick="startGameOnclick"
        android:text="@string/start_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Start game" />

    <Button
        android:id="@+id/startSettingsBtn"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="202dp"
        android:layout_height="70dp"
        android:layout_marginBottom="124dp"
        android:onClick="startSettingsOnClick"
        android:text="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Settings" />

    <Button
        android:id="@+id/startLeaderboardBtn"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="201dp"
        android:layout_height="66dp"
        android:layout_marginBottom="56dp"
        android:onClick="startLeaderboardOnClick"
        android:text="@string/leaderboard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Leaderboard" />

    <Button
        android:id="@+id/quitBtn"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="202dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:text="@string/quit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Quit" />

</androidx.constraintlayout.motion.widget.MotionLayout>